syntax = "proto2";
package sdb;

/* to generate service */
option cc_generic_services = true;

option go_package="./proto";

// The greeting service definition.
// Sends a greeting
service Schedule {
  rpc Depart(ExecQueryRequest) returns (ExecQueryReply) {}
}

// The request message containing the user's name.
message ExecQueryRequest {
  required string name = 1;
  required string sql = 2;
  required uint64 sid = 3;
  required uint64 uid = 4;
  required uint64 dbid = 5;
  required uint64 xid = 6;
}

// The response message containing the greetings
message ExecQueryReply {
  required string message = 1;
}
